[package]
name = "nuklear-backend-gdi"
version = "0.1.0"
authors = ["Serhii Plyhun <snuk188@gmail.com>"]
keywords = ["widgets", "gui", "interface", "graphics", "gdi"]
description = "A WinAPI GDI drawing backend for Rust wrapper for Nuklear 2D GUI library"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/snuk182/nuklear-backend-gdi.git"
homepage = "https://github.com/snuk182/nuklear-backend-gdi"

[lib]
name = "nuklear_backend_gdi"
path = "src/lib.rs"

[dependencies]
log = "~0.3"
user32-sys = "~0.2"
gdi32-sys = "~0.2"
kernel32-sys = "~0.2"
winapi = "~0.2"
nuklear-rust = {version = "~0.2", path = "../nuklear-rust"}

[dependencies.image]
version = "~0.12"
optional = true

[features]
default = ["own_window"]
piston_image = ["image"]
own_window = []
