[package]
name = "nuklear-backend-gdi"
version = "0.2.0"
authors = ["Serhii Plyhun <snuk188@gmail.com>"]
keywords = ["widgets", "gui", "interface", "graphics", "gdi"]
description = "A WinAPI GDI drawing backend for Rust wrapper for Nuklear 2D GUI library"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/snuk182/nuklear-backend-gdi.git"
homepage = "https://github.com/snuk182/nuklear-backend-gdi"

[lib]
name = "nuklear_backend_gdi"
path = "src/lib.rs"

[dependencies]
log = "~0.3"
winapi = {version = "~0.3", features = ["windef", "minwindef", "winuser", "winbase", "wingdi", "winnls", "stringapiset", "libloaderapi", "errhandlingapi"]}
nuklear-rust = "~0.4"

[dependencies.image]
version = "*"
optional = true

[features]
default = ["own_window"]
piston_image = ["image"]
own_window = []
